@@ -1,0 +1,6 @@
+! { dg-do compile }
+! { dg-options "-fdec" }
+block data
+   structure /s1/
+   end structure
+end block data
