@@ -1,5 +1,10 @@
 2016-10-23  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/77763
+	* gfortran.dg/pr77763.f90
+
+2016-10-23  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/54730
 	PR fortran/78033
 	* gfortran.dg/pr78033.f90: New test.
